[bug #120046623] Reduce the z-index of context-menu

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -381,7 +381,7 @@ section {
 }
 
 .pull-right >.dropdown-menu {
-  z-index: 99999999999999;
+  z-index:1111;
 }
 
 .comment {
